# slam-mtk

./: CMakeLists.txt  Readme.md  manifest.xml  mtk.pc.in  package.xml
cmake/: mtkConfig.cmake.in
example/: CMakeLists.txt
example/relation/: relation_slameval.cpp
include/mtk/src/: vectview.hpp
include/mtk/types/: SOn.hpp  vect.hpp
include/slom/src/: cs_helper.hpp  internal.hpp
info/: info.xml
mtk/src/: SubManifold.hpp  eigen.hpp
slom/src/: SparseFunction.hpp
src/slom/: Estimator.cpp  SparseFunction.cpp
ukfom/: mtkwrap.hpp  ukf.hpp
ukfom/lapack/: cholesky.hpp  invert.hpp
ukfom/traits/: dof.hpp
unit_test/: CMakeLists.txt  boost_check_close_vector.hh  ukfom_test.cc
